cleaned up code and added relevant comments.

--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
     <script src="/static/clientcontroller.js"></script>
   </head>
   <body>
-    <div class="join">
+    <div id="menu">
         <button id="new">New Room</button>
         <br><br>
         <input type="text" id="roomcode" placeholder="Enter your room code here">
