--- a/static/index.html
+++ b/static/index.html
@@ -20,8 +20,7 @@
         <button id="join">Join Room</button>
         <br><br>
     </div>
-    <div class="gameboard" id="myBoard">
-        
-    </div>
+    <div class="gameboard" id="oppoBoard"></div>
+    <div class="gameboard" id="myBoard"></div>
   </body>
 </html>
