changed displayed tile of html.

--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>A Multiplayer Game</title>
+    <title>Gati's BattleShip Game</title>
     <style>
         button {
             width: 200px;
