--- a/static/index.html
+++ b/static/index.html
@@ -19,11 +19,11 @@
   <body>
     <h4 id="status" style="background-color:rgb(0, 255, 200);">Create or join a game</h3>
     <div id="menu">
-        <button id="new">New Room</button>
+        <button id="new">New Game</button>
         <br><br>
         <input type="text" id="roomcode" placeholder="Enter your room code here">
         <br>
-        <button id="join">Join Room</button>
+        <button id="join">Join Game</button>
         <br><br>
     </div>
     <div class="gameboard" id="oppoBoard"></div>
