fixed so now multiple games can run simultaneously

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
             }
     </style>
     <h1>Gati's BattleShip Game</h1>
+    <h4 id="room">Room: - </h3>
     <script src="/socket.io/socket.io.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/static/clientcontroller.js"></script>
